--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-02-23  Martin Baulig  <martin@ximian.com>
+
+	* backend/SingleSteppingEngine.cs
+	(SSE.DoAbortInvocation): Use Thread.Abort() to abort the
+	invocation if we have runtime support for it.
+
 2010-02-24  Martin Baulig  <martin@ximian.com>
 
 	* frontend/Main.cs: Don't deadlock when leaving a nested
