--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-03-03  Miguel de Icaza  <miguel@novell.com>
+
+	* Apply patch from Priit Laes <plaes@plaes.org> to build with make -j
+
 2010-02-23  Martin Baulig  <martin@ximian.com>
 
 	* backend/SingleSteppingEngine.cs
