--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2010-07-15  Martin Baulig  <martin@ximian.com>
+
+	* configure.in: Support both 2.6 and trunk.
+
+	* backend/EventQueue.cs: Use the managed Monitor class instead of
+	glib's threading functions.
+
+	* backend/server/mutex.[ch]: Removed.
+
 2010-03-03  Miguel de Icaza  <miguel@novell.com>
 
 	* Apply patch from Priit Laes <plaes@plaes.org> to build with make -j
