Welcome to GitHub :-)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-07-31  Martin Baulig  <martin@ximian.com>
+
+	Welcome to GitHub :-)
+
 2010-06-09  Martin Baulig  <martin@ximian.com>
 
 	* backend/server/mutex.c
